--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,26 @@
     <string name="app_name">GreenKamchatka</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="registration">Регистрация</string>
+    <string name="welcome">Добро пожаловать!</string>
+    <string name="name">Имя</string>
+    <string name="login">Логин</string>
+    <string name="password">Пароль</string>
+    <string name="saved">Сохранить</string>
+    <string name="forgot_password">Забыли пароль?</string>
+    <string name="sign_in">Войти</string>
+    <string name="register">Зарегистрироваться</string>
+    <string name="email">E-mail</string>
+    <string name="confirm_password">Повторить пароль</string>
+    <string name="no_account">У вас нет аккаунта?</string>
+    <string name="has_account">У вас есть аккаунт?</string>
+    <string name="collect_trash">Собирай мусор</string>
+    <string name="hoard_coins">Копи экокоинты</string>
+    <string name="parks">Парки</string>
+    <string name="trails">Тропы</string>
+    <string name="profile">Личный кабинет</string>
+    <string name="chat">Обратная связь</string>
+    <string name="report">Сообщить о проблеме</string>
+    <string name="attach_photo">Прикрепить фото</string>
+    <string name="send">Отправить</string>
 </resources>
