--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="report">Сообщить о проблеме</string>
     <string name="attach_photo">Прикрепить фото</string>
     <string name="send">Отправить</string>
+    <string name="text">Но базовый вектор развития не даёт нам иного выбора, кроме определения анализа существующих паттернов поведения. Современные технологии достигли такого уровня, что перспективное планирование однозначно определяет каждого участника как способного принимать собственные решения касаемо модели развития. Мы вынуждены отталкиваться от того, что современная методология разработки способствует подготовке и реализации стандартных подходов.</string>
+    <string name="reviewrs">Был возле источника родниковой воды на тропе “Центральный”, всё хорошо, белки довольны, воздух чистый.</string>
 </resources>
